--- a/site/www/site-visionnage/view/inscription.html
+++ b/site/www/site-visionnage/view/inscription.html
@@ -32,7 +32,7 @@
 				<label for="age">Sexe</label>
 				<div class="radio">
 	              <label>
-	                <input name="sexe" type="radio" value="F">
+	                <input checked="checked" name="sexe" type="radio" value="F">
 	                Femme
 	              </label>
 	              <label>
