--- a/site/www/site-visionnage/view/visionnage.html
+++ b/site/www/site-visionnage/view/visionnage.html
@@ -21,7 +21,7 @@
 			ready: function () {
 				$(this).jPlayer("setMedia", {
 					title: "Big Buck Bunny",
-					rtmpv: "rtsp://stream01.univ-lorraine.fr:80/vod/mp4:547353e584cfc.mp4",
+					rtmpv: "<?php echo $url; ?>",
 				});
 			},
 			swfPath: "dist/jplayer",
@@ -38,82 +38,95 @@
 			remainingDuration: true,
 			toggleDuration: true
 		});
-		$( "#annot" ).click(function() {
-			var currentTime = $('#jquery_jplayer_1').data("jPlayer").status.currentTime;
-			$('#succes').text("Vous avez été supris a : " + currentTime + " s");
-			setTimeout(function() {
-	    		$('#succes').text("");
-			}, 2000); 
-			envoi("bouton",currentTime); 
-		});
 	});
-function envoi(nom,currentTime)
+	function envoi(nom)
 	{
-		var pseudo = $('#login').val();
-	    var password = $('#password').val();
+	    var currentTime = $('#jquery_jplayer_1').data("jPlayer").status.currentTime;
+		$('#succes').text("Vous avez été supris a : " + currentTime + " s");
 		$.ajax
 		({
 		    type: "POST",
-			data: '&nom='+ nom +'&currentTime=' + password,
-		    url: "http://localhost/site/www/site-visionnage/annot",
+			data: '&nom='+ nom +'&currentTime=' + currentTime,
+		    url: "http://localhost/site-visionnage/annot",
 		    success: function(response) {
-                    //console.error(JSON.stringify(response));
-                    alert(response);
+		    		$('tbody').append("<tr><td>"+nom+"</td><td>"+currentTime+"</td><td><bouton>supprimé</bouton></td></tr>");
                 },
                 error: function() {
-                    //console.error("error");
-                    alert('Not working!');
+                	alert("Il y a un problème, désolé!");
                 }
 		});
 	}
 
 	//]]>
 	</script>
-	<div id="jp_container_1" class="jp-video jp-video-360p" role="application" aria-label="media player">
-		<div class="jp-type-single">
-			<div id="jquery_jplayer_1" class="jp-jplayer"></div>
-			<div class="jp-gui">
-				<div class="jp-video-play">
-					<button class="jp-video-play-icon" role="button" tabindex="0">play</button>
-				</div>
-				<div class="jp-interface">
-					<div class="jp-progress">
-						<div class="jp-seek-bar">
-							<div class="jp-play-bar"></div>
+	<div class="row text-center">
+		<div id="video" class="col-md-8">
+			<div id="jp_container_1" class="jp-video jp-video-360p" role="application" aria-label="media player">
+				<div class="jp-type-single">
+					<div id="jquery_jplayer_1" class="jp-jplayer"></div>
+					<div class="jp-gui">
+						<div class="jp-video-play">
+							<button class="jp-video-play-icon" role="button" tabindex="0">play</button>
 						</div>
-					</div>
-					<div class="jp-current-time" role="timer" aria-label="time">&nbsp;</div>
-					<div class="jp-duration" role="timer" aria-label="duration">&nbsp;</div>
-					<div class="jp-controls-holder">
-						<div class="jp-controls">
-							<button class="jp-play" role="button" tabindex="0">play</button>
-							<button class="jp-stop" role="button" tabindex="0">stop</button>
-						</div>
-						<div class="jp-volume-controls">
-							<button class="jp-mute" role="button" tabindex="0">mute</button>
-							<button class="jp-volume-max" role="button" tabindex="0">max volume</button>
-							<div class="jp-volume-bar">
-								<div class="jp-volume-bar-value"></div>
+						<div class="jp-interface">
+							<div class="jp-progress">
+								<div class="jp-seek-bar">
+									<div class="jp-play-bar"></div>
+								</div>
+							</div>
+							<div class="jp-current-time" role="timer" aria-label="time">&nbsp;</div>
+							<div class="jp-duration" role="timer" aria-label="duration">&nbsp;</div>
+							<div class="jp-controls-holder">
+								<div class="jp-controls">
+									<button class="jp-play" role="button" tabindex="0">play</button>
+									<button class="jp-stop" role="button" tabindex="0">stop</button>
+								</div>
+								<div class="jp-volume-controls">
+									<button class="jp-mute" role="button" tabindex="0">mute</button>
+									<button class="jp-volume-max" role="button" tabindex="0">max volume</button>
+									<div class="jp-volume-bar">
+										<div class="jp-volume-bar-value"></div>
+									</div>
+								</div>
+								<div class="jp-toggles">
+									<button class="jp-repeat" role="button" tabindex="0">repeat</button>
+									<button class="jp-full-screen" role="button" tabindex="0">full screen</button>
+								</div>
+							</div>
+							<div class="jp-details">
+								<div class="jp-title" aria-label="title">&nbsp;</div>
 							</div>
 						</div>
-						<div class="jp-toggles">
-							<button class="jp-repeat" role="button" tabindex="0">repeat</button>
-							<button class="jp-full-screen" role="button" tabindex="0">full screen</button>
-						</div>
 					</div>
-					<div class="jp-details">
-						<div class="jp-title" aria-label="title">&nbsp;</div>
+					<div class="jp-no-solution">
+						<span>Update Required</span>
+						To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
 					</div>
 				</div>
 			</div>
-			<div class="jp-no-solution">
-				<span>Update Required</span>
-				To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
-			</div>
+		</div>
+		<div id="bouton" class="col-md-4">
+			<h5> Interraction : </h5>
+			<button type="button" onclick="envoi('aide');" name="aide"class="btn-md btn btn-info">AIDE</button>
+			<button type="button" name="attention"onclick="envoi('attention');" class="btn-md btn btn-info">attention</button>
+			<button type="button" name="perturbant" onclick="envoi('perturbant');" class="btn-md btn btn-info">perturbant</button><br>
+			<h5> Emotion : </h5>
+			<a id="emotion" onclick="envoi('joie');" name="joie"class="btn-md btn btn-success">joie</a>
+			<a id="emotion" onclick="envoi('tristesse');" name="tristesse"class="btn-md btn btn-primary">tristesse</a>
+			<a id="emotion" onclick="envoi('colere');" name="colere"class="btn-md btn btn-danger">colere</a>
+		</div>	
+		<div class="col-md-4 liste_annot">
+			<table class="table table-fixed">
+		          <thead>
+		            <tr>
+		              <th class="col-xs-4">Nom</th><th class="col-xs-4">Temps</th><th class="col-xs-4"></th>
+		            </tr>
+		          </thead>
+		          <tbody>
+		            <?php echo $annot;?>
+		          </tbody>
+		    </table>
 		</div>
 	</div>
-		<button type="button" id="annot"/>
-		        <img id="image" src="dist/skin/blue.monday/image/url.jpeg" style="" alt="bouton"/> 
-		</button>
-		<div id="succes"></div>
+</div>
 </body>
