--- a/site/www/site-visionnage/view/accueil.html
+++ b/site/www/site-visionnage/view/accueil.html
@@ -34,38 +34,17 @@
 				<a href = "<?php echo $app->urlFor('inscription');?>" class="text-center new-account">Inscription</a>
 		</div>
 	</div>
+	<br>
+	<br>
+	<h4 class="text-center"> Remarque sur la protection de la vie privée </h4><br>
+	<div class="row text-center">
+		L'enregistrement de vos réponses ne contient aucune information d'identification sur vous, à moins
+		qu'une question ne vous ait été posée dans ce sens. Si vous avez répondu à un questionnaire utilisant
+		des invitations, vous pouvez être assuré(e) que le code de l'invitation n'est pas enregistré avec votre
+		réponse. Les invitations sont gérées dans une base de données séparée qui n'est mise à jour que pour
+		indiquer si vous avez ou non utilisé votre code pour remplir le questionnaire. Il n'y a aucun moyen
+		de faire le lien entre les invitations et les réponses enregistrées pour ce questionnaire.
+	</div>
 </div> 
 </body>
 					
-<?php
-
-/*	class Accueil{
-
-		function titre(){
-
-			return "<div id='titre'>
-						<h1>Expérience Psyphine</h1>
-						<h2> Visionnage vidéo</h2>
-					</div>";
-					
-		}
-		function text(){
-
-			return "<div id='texte'>
-					</div>";
-		}
-		function connexion(){
-
-			return 
-			"<div id='connexion_inscription' style='font-size:15px' >
-					Connexion:<br>
-					Pseudo : <input size=5px style='height: 19px; padding:0; margin:0; font-size:12px;' type='text' id='login' name='login'>
-					Mot de passe : <input size=5px style='height: 19px; padding:0; margin:0; font-size:12px;' id='password' type='password' name='password'>
-					<button id='submit-connexion' style='height: 25px; padding:2px; margin:2px; font-size:12px;' onclick='envoi('PHP/connexion.php');' >Se connecter</button>
-					<a href='>Inscription</a>	
-			</div>";
-		}
-
-	}
-	*/
-?>
