--- a/site/www/site-visionnage/view/remerciement.html
+++ b/site/www/site-visionnage/view/remerciement.html
@@ -22,8 +22,7 @@
 	</p><br>
 	<div class="row">
 			<div class="col-md-offset-5 col-md-1">
-				<?php echo $_SESSION['id_video'];?>
-				<button href="<?php echo $app->urlFor('consigne');?>" class="btn btn-primary">Envoyez mes réponses</button>
+				<a href="<?php echo $app->urlFor('consigne');?>" class="btn btn-primary">Annoter une nouvelle vidéo</a>
 			</div>
 		</div>
 	<div class="row text-center"id="partage">	
