--- a/site/www/site-visionnage/CSS/site.CSS
+++ b/site/www/site-visionnage/CSS/site.CSS
@@ -88,7 +88,7 @@ margin-top: 10px;
 /*infoCo*/
 #info
 {
-  position : absolute;
+  /*position : absolute;*/
   font-size: 15px;
   background-color: #7DCD7D;
   border:2px solid #228B22 ;
@@ -235,7 +235,7 @@ ul{
   font-size: 15px;
   border:2px solid #DCDCDC ;
   width:390px;
-  height:200px;
+  height:250px;
   float : right;
 }
 .liste_annot{
@@ -259,8 +259,8 @@ ul{
   border-bottom-width: 0;
 }
 img{
-  width:250px;
-  height:250px;
+  width:200px;
+  height:200px;
   margin-left : 40px;
   margin-top: 20px;
 }
