--- a/site/www/site-visionnage/view/infoCo.html
+++ b/site/www/site-visionnage/view/infoCo.html
@@ -1,4 +1,5 @@
 <div id="info">
+	<!-- Ce cadre permet d'identifier la personne et lui permettre de se déconnecter -->
 	Bonjour, <?php echo $_SESSION['pseudo'] ?></br>
 	Merci de participer à cette expérience !
 	<div id="deconnexion">
