--- a/site/www/site-visionnage/view/fin.html
+++ b/site/www/site-visionnage/view/fin.html
@@ -1,5 +1,7 @@
 <body>
 <div id="fb-root"></div>
+
+<!-- script pour facebook -->
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
@@ -7,6 +9,9 @@
   js.src = "//connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v2.4";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+
+
+
 <div class="container">
 	<div class="row text-center"id="titre">
 		<?php include('infoCo.html'); ?>
@@ -18,7 +23,9 @@
 		Merci d'avoir participé à cette expérience <?php echo $_SESSION['pseudo'] ?>, vos réponses seront utilisées afin de poursuivre l'analyse des vidéos. <br>
 		Puisqu'il ne reste plus de vidéos à annoter, vous pouvez dès à présent si vous le souhaitez partager le lien du site à vos amis facebook avant de vous déconnecter. <br> 
 		</font>
-	</p><br>
+	</p><br>  
+
+	<!-- bouton facebook -->
 	<div class="row text-center"id="partage">	
 		Faites partager le lien à vos amis : <br><br>
 		<div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button"></div>
