--- a/site/www/site-visionnage/view/consigne.html
+++ b/site/www/site-visionnage/view/consigne.html
@@ -10,14 +10,34 @@
 	<div class="row text-center">
 		<ul id="breadcrumbs-two"  class="row text-center">
 		    <li><a href="" class="current">Consigne</a></li>
-		    <li><a href="<?php echo $app->urlFor('visionnage');?>" class="after">Visionnage</a></li>
+		    <li><a href="<?php echo $app->urlFor('visionnage');?>" class="after">Annotation</a></li>
 		    <li><a class="after blocked">Questionnaire</a></li>
 		</ul>
 	</div>
-	<p id='texte' class = "text-center row">
-	Merci de prendre le temps de participer à l'expérience. <br> Elle comporte trois étapes, d'abord la lecture des consignes, ensuite le visionnage et annotation de la vidéo, puis un questionnaire que vous devrez remplir.  <br>Pour passer d'une étape à l'autre vous pouvez appuyer sur les boutons du menu au dessus de ce paragraphe. <br>Vous pourrez aisement passer des consignes au visionnage et inversement, mais vous ne pourrez plus revenir en arrière une fois arrivé au questionnaire, ni une fois le questionnaire validé. Assurez-vous d'avoir terminé l'annotation avant de passer au questionnaire. <br>Si vous quittez cette page ou si vous vous deconnectez, vous serez automatiquement redirigé vers l'étape à laquelle vous vous trouviez en revenant sur le site, ou en vous reconnectant.<br>
+	<div id='texte' class = "row">
+	Merci de prendre le temps de participer à l'expérience. <br> Elle comporte deux étapes, d'une part le visionnage et l'annotation d'extraits de vidéos (vidéos muettes), et d'autre part un questionnaire que vous devrez remplir.  <br>Pour passer d'une étape à l'autre vous pouvez appuyer sur les boutons du menu au dessus de ce paragraphe. <br>Vous pouvez passer d'une étape à l'autre et revenir sur les étapes précédentes.<br>Si vous quittez cette page ou si vous vous deconnectez, vous serez automatiquement redirigé vers l'étape à laquelle vous vous trouviez en revenant sur le site, ou en vous reconnectant.<br>
 	Vous pouvez maintenant passer à l'étape suivante.
-	</p>
+
+	Pour l'annotation de vidéos, vous devrez utiliser les boutons se trouvant à droite de la vidéo. Les différentes annotations seront ensuite visibles dans le tableau se trouvant en dessous de la vidéo. Vous pouvez choisir de supprimer vos annotations si vous changez d'avis, le tableau comporte le nom du bouton sur lequel vous avez appuyé, le moment où vous avez appuyé sur ce bouton, et un bouton pour supprimer l'annotation si vous souhaitez effectuer une modification. Annotez uniquement lorsque cela vous semble nécessaire. Une fois la phase d'annotation terminée, vous pouvez passer à l'étape du questionnaire.         	
+	</div> 
+	<img  id="image2" src="image/2s.png"/>
+	<br><br>
+
+	<div id='texte' class = "row">
+        <div class="col-md-6">
+            La vidéo montre un participant réalisant une figure du tangram. <br>
+		 Ce jeu est proche du puzzle : il faut reproduire une forme imposée à partir de 7 pièces très simples : 5 triangles, un carré et un parallélogramme. Ces éléments doivent quasiment toujours se toucher mais ne doivent jamais se recouvrir. 
+        </div>
+		 
+
+
+		 </p>
+		 <br>
+	</div>
+	<div id='texte' class = "row">
+	 Le participant est face à un écran d'ordinateur sur lequel apparaît la forme imposée qu'il doit reproduire sur le support devant lui. Cette image est affichée pendant 2 secondes lorsqu'il appuie sur la touche espace de son clavier. Il a la possibilité de revoir cette image 5 fois sans contrainte de temps. Par contre son score diminue à chaque fois qu'il souhaite revoir l'image. Le but pour le participant est d'obtenir le meilleur score possible. La forme qu'il doit reproduire est affichée à droite de la vidéo. Il peut réaliser jusque 8 figures. Cette image changera si le participant passe à l'image suivante. <br> Comme vous le constaterez l'espace de l'expérience comprend une lampe qui à la particularité de se comporter de différentes manières (s'allumer, s'éteindre ou encore changer de couleurs). Enfin, vous allez pouvoir utiliser des boutons à votre disposition pour annoter différents comportements et émotions tant manifestés par le participant que par la lampe. <br> 
+	 Vous pouvez dès à présent visionner l'extrait de la vidéo et annoter à l'aide des boutons correspondants.
+	</div>
 	<div
 </div> 
 </body>
