--- a/site/www/site-visionnage/view/accueil.html
+++ b/site/www/site-visionnage/view/accueil.html
@@ -5,15 +5,15 @@
 <div class="container">
 	<div class="row text-center"id="titre">
 		<div class="span6 offset3" >
-			<h1>Expérience Psyphine</h1>
-			<h2> Visionnage vidéo</h2>
+			<h1>Expérience TangrIAm 2</h1>
+			<h2> Annotation d'extraits de vidéos </h2>
 		</div>
 	</div>
 	<div id='texte' class = "text-center row">
-	Bienvenue sur le site de la deuxième phase de l'expérience Tangriam réalisé par l'équipe psyphine. <br>
-L'expérience tangriam a pour but de comprendre quand l'humain va considérer un objet comme intelligent. Pour cela la première phase d'expérience a consisté à filmer des participants en interraction avec un objet pendant la réalisation d'un <a href"https://fr.wikipedia.org/wiki/Tangram">tangram.</a><br>
-Le but de cette deuxième phase est d'annaliser les videos d'un point de vue complètement objectif.
-Pour ce faire, il vous suffit de vous inscrire en appuyant sur le bouton « inscription » ou de vous connecter si vous êtes déjà inscrit.<br>
+	Bienvenue sur le site à partir duquel vous êtes invité à participer à une expérience intitulée "TangrIAm 2" dans le cadre du projet PsyPhINe. <br>
+Le projet a pour but l'étude de l'interaction entre un agent humain et un agent non humain. Pour cela une première expérience a consisté à filmer des participants pendant la réalisation d'un <a href"https://fr.wikipedia.org/wiki/Tangram">tangram.</a><br>
+Cette expérience proprement dite consiste à faire annoter ces extraits de vidéos par des participants n'ayant aucune connaissance de l'expérience. Vous disposerez de consignes précises pour ce faire après vous être connecté. <br>
+Si vous souhaitez participer à cette expérience, il vous suffit de vous inscrire en appuyant sur le bouton « inscription » ou de vous connecter si vous êtes déjà inscrit.<br>
 	</div>
 	<div class="row">
 		<div class="col-sm-6 col-md-4 col-md-offset-4">
@@ -35,8 +35,7 @@ Pour ce faire, il vous suffit de vous inscrire en appuyant sur le bouton « ins
 	<br>
 	<h4 class="text-center"> Remarque sur la protection de la vie privée </h4><br>
 	<div class="row text-center">
-		L'enregistrement de vos réponses ne contient aucune information d'identification sur vous, à moins
-		qu'une question ne vous ait été posée dans ce sens. Si vous avez répondu à un questionnaire utilisant
+		L'enregistrement de vos réponses ne contient aucune information d'identification qui permettra de vous identifier. Si vous avez répondu à un questionnaire utilisant
 		des invitations, vous pouvez être assuré(e) que le code de l'invitation n'est pas enregistré avec votre
 		réponse. Les invitations sont gérées dans une base de données séparée qui n'est mise à jour que pour
 		indiquer si vous avez ou non utilisé votre code pour remplir le questionnaire. Il n'y a aucun moyen
