--- a/site/www/site-visionnage/view/visionnage.html
+++ b/site/www/site-visionnage/view/visionnage.html
@@ -12,7 +12,7 @@
 			<!-- menu -->
 
 		    <li><a href="<?php echo $app->urlFor('consigne');?>" class="before">Consigne</a></li>
-		    <li><a href="" class="current">Visionnage</a></li>
+		    <li><a href="" class="current">Annotation</a></li>
 		    <li><a href="<?php echo $app->urlFor('questionnaire');?>"class="after">Questionnaire</a></li>
 		</ul>
 	</div>
@@ -120,15 +120,14 @@
 	</script>
 	<!-- Consigne -->
 	<p id="texte" class="row text-center">
-		Vous êtes arrivé à l'étape d'annotation de vidéos, le but de cette étape est de regarder la video et de l'annoter. L'annotation se fait en appuyant sur les boutons se trouvant à droite de la vidéo. Les différentes annotations seront ensuite visibles dans le tableau se trouvant en dessous de la vidéo. Vous pouvez choisir de supprimer vos annotations si vous changez d'avis, le tableau comporte le nom du bouton sur lequel vous avez appuyé, le moment où vous avez appuyé sur ce bouton, et un bouton pour supprimer l'annotation si vous souhaitez effectuer une modification. Annotez uniquement lorsque cela vous semble nécessaire. Une fois la phase d'annotation terminée, vous pouvez passer à l'étape du questionnaire. Il ne vous sera plus possible de revenir à l'étape du visionnage avant d'avoir terminé le questionnaire. <br><br>
-		 La vidéo montre un participant réalisant une figure du tangram. Il doit placer les pièces de manière à reproduire la figure solution qui se trouve à droite de la vidéo. Il peut réaliser jusque 8 figures. Cette image changera si le participant passe à l'image suivante. Les boutons correspondent à différentes réactions du participant. Regardez attentivement la vidéo et appuyez sur le bouton correspondant si vous jugez qu'il manifeste l'un ou l'autre des comportements.
-		Voici les consignes pour chaque boutons. Il y a deux catégories, la première concerne les interractions entre la lampe et le sujet, la deuxième concerne les émotions du sujet.<br><br>
+		
+		Vous disposez de deux catégories de boutons, la première concerne les comportements des agents (participant et lampe), la deuxième concerne les émotions des agents et leur valence (positive ou négative). Vous disposez en plus d'un bouton spécifique qui vous permet d'indiquer les moments où vous percevez une interaction entre les agents. L'interaction est l'action ou l'influence reciproque qui peut s'établir entre 2 agents. <br><br>
 		<ul id="texte"class="text-center list-group">
-			<li class="list-group-item">Cliquez sur le bouton « AIDE » à chaque fois que le sujet semble s’aider de la lampe dans la résolution du tangram</li>
-			<li class="list-group-item">Cliquez sur le bouton « ATTENTIF » à chaque fois que le sujet semble prêter une attention particulière à la lampe</li>
-			<li class="list-group-item">Cliquez sur le bouton « LAMPE GENANTE » à chaque fois que le comportement de la lampe semble gêner le sujet</li>
-			<li class="list-group-item">Cliquez sur le bouton « LAMPE AIDANTE » à chaque fois que le comportement de la lampe semble s'ajuster au comportement du sujet dans le but de l'aider</li>
-			<li class="list-group-item">Cliquez sur un des boutons relatifs aux différentes émotions à chaque fois que le sujet manifeste une émotion particulière en réaction au comportement de la lampe (« JOIE », « COLERE », « DEGOUT », « SURPRISE »)</li>
+			<li class="list-group-item">Cliquez sur le bouton "REACTION SUJET" à chaque fois que le participant semble reagir au comportement de la lampe</li>
+			<li class="list-group-item">Cliquez sur le bouton "REACTION LAMPE" à chaque fois que la lampe semble réagir au comportement du sujet</li>
+			<li class="list-group-item">Cliquez sur le bouton " EMOTION POSITIVE " à chaque fois que la reaction de l'un ou l'autre des agents exprime une émotion positive. </li>
+			<li class="list-group-item">Cliquez sur le bouton " EMOTION NEGATIVE " à chaque fois que la reaction de l'un ou l'autre des agents exprime une émotion négative. </li>
+			<li class="list-group-item">Cliquez sur le bouton "INTERACTION" lorsque vous noté une influence réciproque entre la lampe et le sujet.</li>
 		</ul><br>
 	</p>
 
@@ -183,16 +182,13 @@
 		<!-- les boutons d'annotations -->
 
 		<div id="bouton" class="col-md-4">
-			<h5> Interaction : </h5>
-			<button type="button" onclick="envoi('aide');" name="aide"class="btn-md btn btn-info">AIDE</button>
-			<button type="button" name="attention"onclick="envoi('attention');" class="btn-md btn btn-info">ATTENTIF</button>
-			<button type="button" name="lampe_aidante" onclick="envoi('lampe_aidante');" class="btn-md btn btn-info">LAMPE AIDANTE</button>
-			<button type="button" name="perturbant" onclick="envoi('perturbant');" class="btn-md btn btn-info">LAMPE GENANTE</button><br>
-			<h5> Emotion : </h5>
-			<a id="emotion" onclick="envoi('joie');" name="joie"class="btn-md btn btn-success">JOIE</a>
-			<a id="emotion" onclick="envoi('dégout');" name="dégout"class="btn-md btn btn-primary">DEGOUT</a>
-			<a id="emotion" onclick="envoi('colere');" name="colere"class="btn-md btn btn-danger">COLERE</a>
-			<a id="emotion" onclick="envoi('surprise');" name="surprise"class="btn-md btn btn-warning">SURPRISE</a>
+			<h4> Comportements : </h4>
+			<button type="button" onclick="envoi('aide');" name="aide"class="btn-md btn btn-info">REACTION SUJET</button>
+			<button type="button" name="attention"onclick="envoi('attention');" class="btn-md btn btn-info">REACTION LAMPE</button>
+			<h4> Emotion : </h4>
+			<button type="button" name="lampe_aidante" onclick="envoi('lampe_aidante');" class="btn-md btn btn-success">EMOTION POSITIVE</button>
+			<button type="button" name="perturbant" onclick="envoi('perturbant');" class="btn-md btn btn-danger">EMOTION NEGATIVE</button><br><br>
+			<button type="button" name="perturbant" onclick="envoi('perturbant');" class="btn-md btn btn-warning">INTERACTION</button><br>
 		</div>
 		<div id="image" class="col-md-5"/></div>
 	</div>
